--- a/code/config.toml
+++ b/code/config.toml
@@ -1,3 +1,7 @@
 [theme]
-base="light"
-primaryColor="#c7412b"
+
+primaryColor="#d33682"
+backgroundColor="#002b36"
+secondaryBackgroundColor="#586e75"
+textColor="#fafafa"
+font="sans serif"
